--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react-dom": "^16.2.0"
   },
   "devDependencies": {
+    "eslint": "^4.15.0",
+    "eslint-plugin-react": "^7.5.1",
     "webpack-dev-server": "^2.10.1"
   }
 }
