--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "babel-preset-react": "^6.24.1",
     "bootstrap": "^3.3.7",
     "coffeescript": "1.12.7",
+    "lodash-es": "^4.17.4",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
